testdata/baselines/reference/submodule/compiler/functionExpressionShadowedByParams.errors.txt
error TS2349: This expression is not callable.
  Type 'Number' has no call signatures.
functionExpressionShadowedByParams.ts(10,9): error TS2339: Property 'apply' does not exist on type 'number'.


!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'Number' has no call signatures.
==== functionExpressionShadowedByParams.ts (1 errors) ====
    function b1(b1: number) {
       b1.toPrecision(2); // should not error
       b1(12); // should error
    }
    
    
    var x = {
       b: function b(b: number) {
          b.toPrecision(2); // should not error
          b.apply(null, null); // should error
            ~~~~~
!!! error TS2339: Property 'apply' does not exist on type 'number'.
       }
    };
    